--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,9 +8,9 @@ services:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: gymcrmdb
     ports:
-      - "3306:3306"
+      - "3307:3306"
     volumes:
-      -db_data:var/lib/mysql
+      - db_data:/var/lib/mysql
     
   backend:
     build: ./backend             
