--- a/backend/package.json
+++ b/backend/package.json
@@ -6,9 +6,10 @@
     "start": "node src/index.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "mysql2": "^3.3.1",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "mysql2": "^3.3.1"
   }
 }
